--- a/BESM-4e/besm4e.html
+++ b/BESM-4e/besm4e.html
@@ -279,7 +279,10 @@
 		
 		<div class="sheet-table-row">
 			<div class="sheet-table-cell">Dmg Multiplier</div>
-			<div class="sheet-table-cell"><input type="number" name="attr_DmgMult" value="5+@{MassDmgLvl}+@{DmgMultMod}" disabled="true" /></div>
+			<div class="sheet-table-cell"><input type="number" name="attr_DmgMult" value="5+@{DmgMultMod}" disabled="true" /></div>
+			<div class="sheet-table-cell"><input type="number" name="attr_DmgMultMod" value="0" /></div>
+		</div>	
+		<div class="sheet-table-row">
 			<div class="sheet-table-cell"><button type='roll' name='roll_skill' value='/em @{Name} rolls: [[{2d6+@{AtkCV}}]]'></button>Initiative</div>
 			<div class="sheet-table-cell"><button type='roll' name='roll_skill' value='/em @{Name} rolls: [[{3d6kh2+@{AtkCV}}]]'></button>Minor Edge</div>
 			<div class="sheet-table-cell"><button type='roll' name='roll_skill' value='/em @{Name} rolls: [[{4d6kh2+@{AtkCV}}]]'></button>Major Edge</div>
@@ -292,80 +295,131 @@
 			<div class="sheet-table-cell sheet-cell-5"><b>Level</b></div>
 			<div class="sheet-table-cell sheet-cell-5"><b>Range</b></div>
 			<div class="sheet-table-cell sheet-cell-10"><b>Attack Mod</b></div>
+			<div class="sheet-table-cell sheet-cell-10"><b>Dmg Mod</b></div>
+			<div class="sheet-table-cell sheet-cell-10"><b>Wpn Mult</b></div>
 			<div class="sheet-table-cell sheet-cell-10"><b>Damage</b></div>
 			<div class="sheet-table-cell sheet-cell-10"><b>Roll Type</b></div>
 		</div>
 		
 		<div class="sheet-table-row">
+			<!-- Attack -->
 			<div class="sheet-table-cell"><input type="text" name="attr_AtkName1" value="" /></div>
+			<!-- level -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkLvl1" value="0" /></div>
+			<!-- Range -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkRng1" value="0" /></div>
+			<!-- Attack Mod -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkMod1" value="0" /></div>
-			<div class="sheet-table-cell"><input type="number" name="attr_AtkDam1" value="0" /></div>
-			<div class="sheet-table-cell"><select name="attr_atkDice1">
+			<!-- Damage Mod -->
+			<div class="sheet-table-cell"><input type="number" name="attr_AtkDamMod1" value="0" /></div>
+			<!-- Weapon Mult -->
+			<div class="sheet-table-cell"><input type="number" name="attr_AtkWpnMult1" value="[[@{DmgMult} + @{AtkDamMod1}]]" disabled="true"/></div>
+			<!-- Damage -->
+			<input type="hidden" name="attr_AtkDamCalc1" value="(@{AtkWpnMult1}*@{AtkLvl1}+@{AtkCV})" />
+			<div class="sheet-table-cell"><input type="number" name="attr_WpnDam1" value='@{AtkDamCalc1}' disabled="true"/></div>
+			<!-- Roll Type -->
+				<div class="sheet-table-cell"><select name="attr_atkDice1">
 					<option value="@{roll}">Standard</option>
 					<option value="@{minEdge}">Minor Edge</option>
 					<option value="@{majEdge}">Major Edge</option>
 					<option value="@{minObs}">Minor Obstacle</option>
 					<option value="@{majObs}">Major Obstacle</option>
 				</select></div>
-			<div class="sheet-table-cell sheet-cell-15"><button type='roll' name='roll_attack' value='/em @{Name} rolls @{AtkName1} [[{@{atkDice1}+@{AtkCV}+@{AtkMod1}}]]'>Attack</button></div>
+			<!-- Attack Roller -->
+			<div class="sheet-table-cell sheet-cell-10"><button type='roll' name='roll_attack' value='/em @{Name} rolls @{AtkName1} getting  [[{@{atkDice1}+@{AtkCV}+@{AtkMod1}}]] to hit for [[@{AtkDamCalc1}]] damage.'>Attack</button></div>
 		</div>
-		
-		<div class="sheet-table-row">
+	
+	<div class="sheet-table-row">
+			<!-- Attack -->
 			<div class="sheet-table-cell"><input type="text" name="attr_AtkName2" value="" /></div>
+			<!-- level -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkLvl2" value="0" /></div>
+			<!-- Range -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkRng2" value="0" /></div>
+			<!-- Attack Mod -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkMod2" value="0" /></div>
-			<div class="sheet-table-cell"><input type="number" name="attr_AtkDam2" value="0" /></div>
-			<div class="sheet-table-cell"><select name="attr_atkDice2">
+			<!-- Damage Mod -->
+			<div class="sheet-table-cell"><input type="number" name="attr_AtkDamMod2" value="0" /></div>
+			<!-- Weapon Mult -->
+			<div class="sheet-table-cell"><input type="number" name="attr_AtkWpnMult2" value="[[@{DmgMult} + @{AtkDamMod2}]]" disabled="true"/></div>
+			<!-- Damage -->
+			<input type="hidden" name="attr_AtkDamCalc2" value="(@{AtkWpnMult2}*@{AtkLvl2}+@{AtkCV})" />
+			<div class="sheet-table-cell"><input type="number" name="attr_WpnDam2" value='@{AtkDamCalc2}' disabled="true"/></div>
+			<!-- Roll Type -->
+				<div class="sheet-table-cell"><select name="attr_atkDice2">
 					<option value="@{roll}">Standard</option>
 					<option value="@{minEdge}">Minor Edge</option>
 					<option value="@{majEdge}">Major Edge</option>
 					<option value="@{minObs}">Minor Obstacle</option>
 					<option value="@{majObs}">Major Obstacle</option>
 				</select></div>
-			<div class="sheet-table-cell sheet-cell-15"><button type='roll' name='roll_attack' value='/em @{Name} rolls @{AtkName2} [[{@{atkDice2}+@{AtkCV}+@{AtkMod2}}]]'>Attack</button></div>
+			<!-- Attack Roller -->
+			<div class="sheet-table-cell sheet-cell-10"><button type='roll' name='roll_attack' value='/em @{Name} rolls @{AtkName2} getting  [[{@{atkDice2}+@{AtkCV}+@{AtkMod2}}]] to hit for [[@{AtkDamCalc2}]] damage.'>Attack</button></div>
 		</div>
 		
 		<div class="sheet-table-row">
+			<!-- Attack -->
 			<div class="sheet-table-cell"><input type="text" name="attr_AtkName3" value="" /></div>
+			<!-- level -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkLvl3" value="0" /></div>
+			<!-- Range -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkRng3" value="0" /></div>
+			<!-- Attack Mod -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkMod3" value="0" /></div>
-			<div class="sheet-table-cell"><input type="number" name="attr_AtkDam3" value="0" /></div>
-			<div class="sheet-table-cell"><select name="attr_atkDice3">
+			<!-- Damage Mod -->
+			<div class="sheet-table-cell"><input type="number" name="attr_AtkDamMod3" value="0" /></div>
+			<!-- Weapon Mult -->
+			<div class="sheet-table-cell"><input type="number" name="attr_AtkWpnMult3" value="[[@{DmgMult} + @{AtkDamMod3}]]" disabled="true"/></div>
+			<!-- Damage -->
+			<input type="hidden" name="attr_AtkDamCalc3" value="(@{AtkWpnMult3}*@{AtkLvl3}+@{AtkCV})" />
+			<div class="sheet-table-cell"><input type="number" name="attr_WpnDam3" value='@{AtkDamCalc3}' disabled="true"/></div>
+			<!-- Roll Type -->
+				<div class="sheet-table-cell"><select name="attr_atkDice3">
 					<option value="@{roll}">Standard</option>
 					<option value="@{minEdge}">Minor Edge</option>
 					<option value="@{majEdge}">Major Edge</option>
 					<option value="@{minObs}">Minor Obstacle</option>
 					<option value="@{majObs}">Major Obstacle</option>
 				</select></div>
-			<div class="sheet-table-cell sheet-cell-15"><button type='roll' name='roll_attack' value='/em @{Name} rolls @{AtkName3} [[{@{atkDice3}+@{AtkCV}+@{AtkMod3}}]]'>Attack</button></div>
+			<!-- Attack Roller -->
+			<div class="sheet-table-cell sheet-cell-10"><button type='roll' name='roll_attack' value='/em @{Name} rolls @{AtkName3} getting  [[{@{atkDice3}+@{AtkCV}+@{AtkMod3}}]] to hit for [[@{AtkDamCalc3}]] damage.'>Attack</button></div>
 		</div>
 		
 		<div class="sheet-table-row">
+			<!-- Attack -->
 			<div class="sheet-table-cell"><input type="text" name="attr_AtkName4" value="" /></div>
+			<!-- level -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkLvl4" value="0" /></div>
+			<!-- Range -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkRng4" value="0" /></div>
+			<!-- Attack Mod -->
 			<div class="sheet-table-cell"><input type="number" name="attr_AtkMod4" value="0" /></div>
-			<div class="sheet-table-cell"><input type="number" name="attr_AtkDam4" value="0" /></div>
-			<div class="sheet-table-cell"><select name="attr_atkDice4">
+			<!-- Damage Mod -->
+			<div class="sheet-table-cell"><input type="number" name="attr_AtkDamMod4" value="0" /></div>
+			<!-- Weapon Mult -->
+			<div class="sheet-table-cell"><input type="number" name="attr_AtkWpnMult4" value="[[@{DmgMult} + @{AtkDamMod4}]]" disabled="true"/></div>
+			<!-- Damage -->
+			<input type="hidden" name="attr_AtkDamCalc4" value="(@{AtkWpnMult4}*@{AtkLvl4}+@{AtkCV})" />
+			<div class="sheet-table-cell"><input type="number" name="attr_WpnDam4" value='@{AtkDamCalc4}' disabled="true"/></div>
+			<!-- Roll Type -->
+				<div class="sheet-table-cell"><select name="attr_atkDice4">
 					<option value="@{roll}">Standard</option>
 					<option value="@{minEdge}">Minor Edge</option>
 					<option value="@{majEdge}">Major Edge</option>
 					<option value="@{minObs}">Minor Obstacle</option>
 					<option value="@{majObs}">Major Obstacle</option>
 				</select></div>
-			<div class="sheet-table-cell sheet-cell-15"><button type='roll' name='roll_attack' value='/em @{Name} rolls @{AtkName4} [[{@{atkDice4}+@{AtkCV}+@{AtkMod4}}]]'>Attack</button></div>
+			<!-- Attack Roller -->
+			<div class="sheet-table-cell sheet-cell-10"><button type='roll' name='roll_attack' value='/em @{Name} rolls @{AtkName1} getting  [[{@{atkDice4}+@{AtkCV}+@{AtkMod4}}]] to hit for [[@{AtkDamCalc4}]] damage.'>Attack</button></div>
 		</div>
+		
 		
 	</div>
 </div><!-- End Combat Section -->
 <div class="sheet-break"></div>
 
 <div class="sheet-section">
-	<div class="sheet-header">General Attributes</div>
+	<div class="sheet-header">Attributes</div>
 	<div class="sheet-table sheet-input-border">
 		<div class="sheet-table-row">
 			<div class="sheet-table-cell sheet-cell-button"></div>
@@ -518,18 +572,82 @@
 </div><!-- End Attributes Section -->
 <div class="sheet-break"></div>
 
+<div class="sheet-section">
+	<div class="sheet-header">Defects</div>
+	<div class="sheet-table sheet-input-border">
+		<div class="sheet-table-row">
+			<div class="sheet-table-cell sheet-cell-button"></div>
+			<div class="sheet-table-cell sheet-cell-15"><b>Name</b></div>
+			<div class="sheet-table-cell sheet-cell-5"><b>Points</b></div>
+			<div class="sheet-table-cell sheet-cell-10"><b>Category</b></div>
+			<div class="sheet-table-cell sheet-cell"><b>Description</b></div>
+		</div>
+		<div class="sheet-table-row">
+			<div class="sheet-table-cell sheet-cell-button"><button type='roll' name='roll_skill' value='/em @{Name} has the defect @{DefectName1} : @{DefectDesc1}'></button></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectName1" value="" /></div>
+			<div class="sheet-table-cell"><input type="number" name="attr_DefectPoints1" value="0" /></div>
+		<div class="sheet-table-cell"><input type="text" name="attr_DefectCat1" value="" /></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectDesc1" /></div>
+		</div>
+		<div class="sheet-table-row">
+			<div class="sheet-table-cell sheet-cell-button"><button type='roll' name='roll_skill' value='/em @{Name} has the defect @{DefectName2} : @{DefectDesc2}'></button></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectName2" value="" /></div>
+			<div class="sheet-table-cell"><input type="number" name="attr_DefectPoints2" value="0" /></div>
+		<div class="sheet-table-cell"><input type="text" name="attr_DefectCat2" value="" /></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectDesc2" /></div>
+		</div>
+		<div class="sheet-table-row">
+			<div class="sheet-table-cell sheet-cell-button"><button type='roll' name='roll_skill' value='/em @{Name} has the defect @{DefectName3} : @{DefectDesc3}'></button></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectName3" value="" /></div>
+			<div class="sheet-table-cell"><input type="number" name="attr_DefectPoints3" value="0" /></div>
+		<div class="sheet-table-cell"><input type="text" name="attr_DefectCat3" value="" /></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectDesc3" /></div>
+		</div>
+		<div class="sheet-table-row">
+			<div class="sheet-table-cell sheet-cell-button"><button type='roll' name='roll_skill' value='/em @{Name} has the defect @{DefectName4} : @{DefectDesc4}'></button></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectName4" value="" /></div>
+			<div class="sheet-table-cell"><input type="number" name="attr_DefectPoints4" value="0" /></div>
+		<div class="sheet-table-cell"><input type="text" name="attr_DefectCat4" value="" /></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectDesc4" /></div>
+		</div>
+		<div class="sheet-table-row">
+			<div class="sheet-table-cell sheet-cell-button"><button type='roll' name='roll_skill' value='/em @{Name} has the defect @{DefectName5} : @{DefectDesc5}'></button></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectName5" value="" /></div>
+			<div class="sheet-table-cell"><input type="number" name="attr_DefectPoints5" value="0" /></div>
+		<div class="sheet-table-cell"><input type="text" name="attr_DefectCat5" value="" /></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectDesc5" /></div>
+		v</div>
+		<div class="sheet-table-row">
+			<div class="sheet-table-cell sheet-cell-button"><button type='roll' name='roll_skill' value='/em @{Name} has the defect @{DefectName6} : @{DefectDesc6}'></button></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectName6" value="" /></div>
+			<div class="sheet-table-cell"><input type="number" name="attr_DefectPoints6" value="0" /></div>
+		<div class="sheet-table-cell"><input type="text" name="attr_DefectCat6" value="" /></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectDesc6" /></div>
+		</div>
+		<div class="sheet-table-row">
+			<div class="sheet-table-cell sheet-cell-button"><button type='roll' name='roll_skill' value='/em @{Name} has the defect @{DefectName7} : @{DefectDesc7}'></button></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectName7" value="" /></div>
+			<div class="sheet-table-cell"><input type="number" name="attr_DefectPoints7" value="0" /></div>
+		<div class="sheet-table-cell"><input type="text" name="attr_DefectCat7" value="" /></div>
+			<div class="sheet-table-cell"><input type="text" name="attr_DefectDesc7" /></div>
+		</div>
+
+	</div>
+</div><!-- End Defects Section -->
+<div class="sheet-break"></div>
+
 <div class="sheet-section sheet-half">
 	<div class="sheet-header">Items and Equipment</div>
 	<textarea name="attr_Items"></textarea>
 </div>
 
 <div class="sheet-section sheet-half">
-	<div class="sheet-header">Description and Backstory</div>
+	<div class="sheet-header">Notes</div>
 	<textarea name="attr_Descrip"></textarea>
 </div>
 <div class="sheet-break"></div>
 
 <div class="sheet-section">
-	<div class="sheet-header">Notes</div>
+	<div class="sheet-header">Description and Backstory</div>
 	<textarea name="attr_Notes"></textarea>
 </div>
