--- a/Ironcrunch/src/html/pages/bonds.html
+++ b/Ironcrunch/src/html/pages/bonds.html
@@ -1,83 +1,87 @@
 
-<div class="sheet-bonds-track">
-  <div>
-    <select class="sheet-progress-input" name="attr_bond-0">
-      <option value="0" selected="selected"></option>
-      <option value="1">-</option>
-      <option value="2">+</option>
-      <option value="3">*</option>
-      <option value="4">#</option>
-    </select>
-    <select class="sheet-progress-input" name="attr_bond-1">
-      <option value="0" selected="selected"></option>
-      <option value="1">-</option>
-      <option value="2">+</option>
-      <option value="3">*</option>
-      <option value="4">#</option>
-    </select>
-    <select class="sheet-progress-input" name="attr_bond-2">
-      <option value="0" selected="selected"></option>
-      <option value="1">-</option>
-      <option value="2">+</option>
-      <option value="3">*</option>
-      <option value="4">#</option>
-    </select>
-    <select class="sheet-progress-input" name="attr_bond-3">
-      <option value="0" selected="selected"></option>
-      <option value="1">-</option>
-      <option value="2">+</option>
-      <option value="3">*</option>
-      <option value="4">#</option>
-    </select>
-    <select class="sheet-progress-input" name="attr_bond-4">
-      <option value="0" selected="selected"></option>
-      <option value="1">-</option>
-      <option value="2">+</option>
-      <option value="3">*</option>
-      <option value="4">#</option>
-    </select>
-    <select class="sheet-progress-input" name="attr_bond-5">
-      <option value="0" selected="selected"></option>
-      <option value="1">-</option>
-      <option value="2">+</option>
-      <option value="3">*</option>
-      <option value="4">#</option>
-    </select>
-    <select class="sheet-progress-input" name="attr_bond-6">
-      <option value="0" selected="selected"></option>
-      <option value="1">-</option>
-      <option value="2">+</option>
-      <option value="3">*</option>
-      <option value="4">#</option>
-    </select>
-    <select class="sheet-progress-input" name="attr_bond-7">
-      <option value="0" selected="selected"></option>
-      <option value="1">-</option>
-      <option value="2">+</option>
-      <option value="3">*</option>
-      <option value="4">#</option>
-    </select>
-    <select class="sheet-progress-input" name="attr_bond-8">
-      <option value="0" selected="selected"></option>
-      <option value="1">-</option>
-      <option value="2">+</option>
-      <option value="3">*</option>
-      <option value="4">#</option>
-    </select>
-    <select class="sheet-progress-input" name="attr_bond-9">
-      <option value="0" selected="selected"></option>
-      <option value="1">-</option>
-      <option value="2">+</option>
-      <option value="3">*</option>
-      <option value="4">#</option>
-    </select>
-    <select class="sheet-progress-input" name="attr_bond-10">
-      <option value="0" selected="selected"></option>
-      <option value="1">-</option>
-      <option value="2">+</option>
-      <option value="3">*</option>
-      <option value="4">#</option>
-    </select>
-    <input class="sheet-hide" type="text" name="attr_bond-filled" value="floor((@{bond-0}+@{bond-1}+@{bond-2}+@{bond-3}+@{bond-4}+@{bond-5}+@{bond-6}+@{bond-7}+@{bond-8}+@{bond-9})/4)" disabled="true"/>
+<input class="sheet-hide sheet-bonds" type="radio" name="attr_ironcrunch-page" id="sheet-bonds" value="2"/>
+<div class="sheet-bonds sheet-hide">
+  <h3 class="sheet-divide">&emsp;BONDS&emsp;</h3>
+  <div class="sheet-bonds-track">
+    <div>
+      <select class="sheet-progress-input" name="attr_bond-0">
+          <option value="0" selected="selected"></option>
+          <option value="1">-</option>
+          <option value="2">+</option>
+          <option value="3">*</option>
+          <option value="4">#</option>
+      </select>
+      <select class="sheet-progress-input" name="attr_bond-1">
+          <option value="0" selected="selected"></option>
+          <option value="1">-</option>
+          <option value="2">+</option>
+          <option value="3">*</option>
+          <option value="4">#</option>
+      </select>
+      <select class="sheet-progress-input" name="attr_bond-2">
+          <option value="0" selected="selected"></option>
+          <option value="1">-</option>
+          <option value="2">+</option>
+          <option value="3">*</option>
+          <option value="4">#</option>
+      </select>
+      <select class="sheet-progress-input" name="attr_bond-3">
+          <option value="0" selected="selected"></option>
+          <option value="1">-</option>
+          <option value="2">+</option>
+          <option value="3">*</option>
+          <option value="4">#</option>
+      </select>
+      <select class="sheet-progress-input" name="attr_bond-4">
+          <option value="0" selected="selected"></option>
+          <option value="1">-</option>
+          <option value="2">+</option>
+          <option value="3">*</option>
+          <option value="4">#</option>
+      </select>
+      <select class="sheet-progress-input" name="attr_bond-5">
+          <option value="0" selected="selected"></option>
+          <option value="1">-</option>
+          <option value="2">+</option>
+          <option value="3">*</option>
+          <option value="4">#</option>
+      </select>
+      <select class="sheet-progress-input" name="attr_bond-6">
+          <option value="0" selected="selected"></option>
+          <option value="1">-</option>
+          <option value="2">+</option>
+          <option value="3">*</option>
+          <option value="4">#</option>
+      </select>
+      <select class="sheet-progress-input" name="attr_bond-7">
+          <option value="0" selected="selected"></option>
+          <option value="1">-</option>
+          <option value="2">+</option>
+          <option value="3">*</option>
+          <option value="4">#</option>
+      </select>
+      <select class="sheet-progress-input" name="attr_bond-8">
+          <option value="0" selected="selected"></option>
+          <option value="1">-</option>
+          <option value="2">+</option>
+          <option value="3">*</option>
+          <option value="4">#</option>
+      </select>
+      <select class="sheet-progress-input" name="attr_bond-9">
+          <option value="0" selected="selected"></option>
+          <option value="1">-</option>
+          <option value="2">+</option>
+          <option value="3">*</option>
+          <option value="4">#</option>
+      </select>
+      <select class="sheet-progress-input" name="attr_bond-10">
+          <option value="0" selected="selected"></option>
+          <option value="1">-</option>
+          <option value="2">+</option>
+          <option value="3">*</option>
+          <option value="4">#</option>
+      </select>
+      <input class="sheet-hide" type="text" name="attr_bond-filled" value="floor((@{bond-0}+@{bond-1}+@{bond-2}+@{bond-3}+@{bond-4}+@{bond-5}+@{bond-6}+@{bond-7}+@{bond-8}+@{bond-9})/4)" disabled="true"/>
+    </div>
   </div>
 </div>
