--- a/Cyberpunk Red/CyberpunkRed.html
+++ b/Cyberpunk Red/CyberpunkRed.html
@@ -75,7 +75,8 @@
     <label data-i18n="Armor">Armor</label>
     <fieldset class="repeating_armor">
       <input name="attr_armor" type="text" class="armorname" />
-      <div class="flex-row">        <label><span data-i18n="armor-head">Head:</span>: <input name="attr_armorhead" type="number" style="display:inline"></label>
+      <div class="flex-row">
+        <label><span data-i18n="armor-head">Head:</span>: <input name="attr_armorhead" type="number" style="display:inline"></label>
         <label><span data-i18n="armor-body">Body:</span>: <input name="attr_armorbody" type="number" style="display:inline"></label>
       </div>
     </fieldset>
@@ -107,7 +108,7 @@
   <div class="equipment section flex-col">
       <div class="cyberware">
         <label data-i18n="cyberware">Cyberware</label>
-        <fieldset class="repeating_gear">
+        <fieldset class="repeating_cyberware">
           <textarea name="attr_cyberware"></textarea>
         </fieldset>
       </div>
