--- a/Ironcrunch/src/html/pages/main.html
+++ b/Ironcrunch/src/html/pages/main.html
@@ -1,30 +1,28 @@
 
 <div class="sheet-character-details-bar">
   <div>
-    <h2>Experience
-      <input class="sheet-xp" type="text" name="attr_xp" placeholder="0"/>
-      <input class="sheet-xp" type="text" name="attr_spent_xp" placeholder="0"/>
-    </h2>
     <div class="sheet-character-name">
       <input class="sheet-pc-name" type="text" name="attr_character_name" placeholder="Character Name"/>
     </div>
     <div class="sheet-resources">
-      <div>
-        <h2 class="sheet-resource-title">Health</h2><img/>
-        <input class="sheet-health-value" type="text" name="attr_health" value="20"/>
+      <div class="sheet-resource">
+        <label class="sheet-health-reset">RESET
+          <input class="sheet-health-reset sheet-hide" type="checkbox" name="attr_health_reset"/>
+        </label>
+        <h2 class="sheet-resource-title">HEALTH</h2>
         <div class="sheet-health-status-box">
-          <h3 class="sheet-health-max">MAX</h3>
-          <h3 class="sheet-health-max-value"><span name="attr_max_health"></span>
-            <input class="sheet-hide" type="text" name="attr_max_health" value="20"/>
-          </h3>
-          <label class="sheet-health-reset">Reset Health
-            <input class="sheet-health-reset sheet-hide" type="checkbox" name="attr_health_reset"/>
-          </label>
+          <input class="sheet-resource-value" type="text" name="attr_health" value="20"/>
+          <div class="sheet-health-max-box">
+            <h3 class="sheet-health-max">/</h3>
+            <h3 class="sheet-health-max-value"><span class="sheet-health-max-value" name="attr_max_health"></span>
+              <input class="sheet-hide" type="text" name="attr_max_health" value="20"/>
+            </h3>
+          </div>
         </div>
       </div>
-      <div>
-        <h2 class="sheet-resource-title">Spirit</h2><img/>
-        <select name="attr_spirit">
+      <div class="sheet-resource">
+        <h2 class="sheet-resource-title">SPIRIT</h2>
+        <select class="sheet-resource-value" name="attr_spirit">
           <option value="10">+10</option>
           <option value="9">+9</option>
           <option value="8">+8</option>
@@ -38,9 +36,9 @@
           <option value="0">+0</option>
         </select>
       </div>
-      <div>
-        <h2 class="sheet-resource-title">Supply</h2><img/>
-        <select name="attr_supply">
+      <div class="sheet-resource">
+        <h2 class="sheet-resource-title">SUPPLY</h2>
+        <select class="sheet-resource-value" name="attr_supply">
           <option value="10">+10</option>
           <option value="9">+9</option>
           <option value="8">+8</option>
@@ -54,9 +52,9 @@
           <option value="0">+0</option>
         </select>
       </div>
-      <div>
-        <h2 class="sheet-resource-title">Wealth</h2><img/>
-        <select name="attr_wealth">
+      <div class="sheet-resource">
+        <h2 class="sheet-resource-title">WEALTH</h2>
+        <select class="sheet-resource-value" name="attr_wealth">
           <option value="10">+10</option>
           <option value="9">+9</option>
           <option value="8">+8</option>
@@ -70,9 +68,9 @@
           <option value="0">+0</option>
         </select>
       </div>
-      <div>
-        <h2 class="sheet-resource-title">Load</h2><img/>
-        <select name="attr_load">
+      <div class="sheet-resource">
+        <h2 class="sheet-resource-title">LOAD</h2>
+        <select class="sheet-resource-value" name="attr_load">
           <option value="12">12</option>
           <option value="11">11</option>
           <option value="10">10</option>
@@ -87,6 +85,16 @@
           <option value="1">1</option>
           <option value="0">0</option>
         </select>
+      </div>
+      <div class="sheet-resource">
+        <h2 class="sheet-resource-title">EXPERIENCE</h2>
+        <div class="sheet-health-status-box">
+          <input class="sheet-resource-value" type="text" name="attr_xp" value="0"/>
+        </div>
+        <h2 class="sheet-resource-title">SPENT</h2>
+        <div class="sheet-health-status-box">
+          <input class="sheet-resource-value" type="text" name="attr_total_xp" value="0"/>
+        </div>
       </div>
     </div>
   </div>
@@ -204,13 +212,6 @@
           <option value="3">*</option>
           <option value="4">#</option>
       </select>
-      <select class="sheet-progress-input" name="attr_misses-10">
-          <option value="0" selected="selected"></option>
-          <option value="1">-</option>
-          <option value="2">+</option>
-          <option value="3">*</option>
-          <option value="4">#</option>
-      </select>
       <input class="sheet-hide" type="text" name="attr_misses-filled" value="floor((@{misses-0}+@{misses-1}+@{misses-2}+@{misses-3}+@{misses-4}+@{misses-5}+@{misses-6}+@{misses-7}+@{misses-8}+@{misses-9})/4)" disabled="true"/>
     </div>
   </div>
@@ -284,13 +285,6 @@
           <option value="4">#</option>
       </select>
       <select class="sheet-progress-input" name="attr_bond-9">
-          <option value="0" selected="selected"></option>
-          <option value="1">-</option>
-          <option value="2">+</option>
-          <option value="3">*</option>
-          <option value="4">#</option>
-      </select>
-      <select class="sheet-progress-input" name="attr_bond-10">
           <option value="0" selected="selected"></option>
           <option value="1">-</option>
           <option value="2">+</option>
@@ -402,54 +396,6 @@
           </select>
           <button type="roll" title="Fulfill your Vow" name="rollVow" value="&amp;{template:ironcrunch} {{header=@{character_name} &lt;em&gt;Fulfill Your Vow&lt;/em&gt; }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}">              </button>
           <input class="sheet-hide" type="text" name="attr_vow-filled" value="floor((@{vow-0}+@{vow-1}+@{vow-2}+@{vow-3}+@{vow-4}+@{vow-5}+@{vow-6}+@{vow-7}+@{vow-8}+@{vow-9})/4)" disabled="disabled"/>
-        </div>
-        <div class="sheet-threat-row">
-          <input class="sheet-threat-name sheet-vow-name" type="text" name="attr_threat_name"/><span class="sheet-vow-threat-label">Threat</span>
-          <div class="sheet-threat-box">
-            <input class="sheet-threat-vow" type="checkbox" name="attr_menace-0"/>
-            <div class="sheet-threat-fill"></div>
-          </div>
-          <div class="sheet-threat-box">
-            <input class="sheet-threat-vow" type="checkbox" name="attr_menace-1"/>
-            <div class="sheet-threat-fill"></div>
-          </div>
-          <div class="sheet-threat-box">
-            <input class="sheet-threat-vow" type="checkbox" name="attr_menace-2"/>
-            <div class="sheet-threat-fill"></div>
-          </div>
-          <div class="sheet-threat-box">
-            <input class="sheet-threat-vow" type="checkbox" name="attr_menace-3"/>
-            <div class="sheet-threat-fill"></div>
-          </div>
-          <div class="sheet-threat-box">
-            <input class="sheet-threat-vow" type="checkbox" name="attr_menace-4"/>
-            <div class="sheet-threat-fill"></div>
-          </div>
-          <div class="sheet-threat-box">
-            <input class="sheet-threat-vow" type="checkbox" name="attr_menace-5"/>
-            <div class="sheet-threat-fill"></div>
-          </div>
-          <div class="sheet-threat-box">
-            <input class="sheet-threat-vow" type="checkbox" name="attr_menace-6"/>
-            <div class="sheet-threat-fill"></div>
-          </div>
-          <div class="sheet-threat-box">
-            <input class="sheet-threat-vow" type="checkbox" name="attr_menace-7"/>
-            <div class="sheet-threat-fill"></div>
-          </div>
-          <div class="sheet-threat-box">
-            <input class="sheet-threat-vow" type="checkbox" name="attr_menace-8"/>
-            <div class="sheet-threat-fill"></div>
-          </div>
-          <div class="sheet-threat-box">
-            <input class="sheet-threat-vow" type="checkbox" name="attr_menace-9"/>
-            <div class="sheet-threat-fill"></div>
-          </div>
-          <div class="sheet-threat-box">
-            <input class="sheet-threat-vow" type="checkbox" name="attr_menace-10"/>
-            <div class="sheet-threat-fill"></div>
-          </div>
-          <button type="roll" disabled="disabled" hidden="hidden" style="opacity: 0; height: 0px;"></button>
         </div>
       </div>
     </fieldset>
