--- a/Ironcrunch/src/html/pages/vows.html
+++ b/Ironcrunch/src/html/pages/vows.html
@@ -98,7 +98,7 @@
               <option value="3">*</option>
               <option value="4">#</option>
           </select>
-          <button type="roll" title="Fulfill your Vow" name="rollVow" value="&amp;{template:ironcrunch} {{header=@{character_name} &lt;em&gt;Fulfill Your Vow&lt;/em&gt; }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}">              </button>
+          <button type="roll" title="Fulfill your Vow" name="rollVow" value="&amp;{template:ironcrunch_progress} {{header=@{character_name} &lt;em&gt;Fulfill Your Vow&lt;/em&gt; }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}">              </button>
           <input class="sheet-hide" type="text" name="attr_vow-filled" value="floor((@{vow-0}+@{vow-1}+@{vow-2}+@{vow-3}+@{vow-4}+@{vow-5}+@{vow-6}+@{vow-7}+@{vow-8}+@{vow-9})/4)" disabled="disabled"/>
         </div>
       </div>
