--- a/Ironcrunch/src/html/pages/main.html
+++ b/Ironcrunch/src/html/pages/main.html
@@ -1,100 +1,105 @@
 
-<div class="sheet-character-details-bar">
-  <div>
+<div class="sheet-header">
+  <div class="sheet-header-items">
     <div class="sheet-character-name">
+      <h3 class="sheet-character-title">Character</h3>
       <input class="sheet-pc-name" type="text" name="attr_character_name" placeholder="Character Name"/>
     </div>
-    <div class="sheet-resources">
-      <div class="sheet-resource">
-        <label class="sheet-health-reset">RESET
-          <input class="sheet-health-reset sheet-hide" type="checkbox" name="attr_health_reset"/>
-        </label>
-        <h2 class="sheet-resource-title">HEALTH</h2>
-        <div class="sheet-health-status-box">
-          <input class="sheet-resource-value" type="text" name="attr_health" value="20"/>
-          <div class="sheet-health-max-box">
-            <h3 class="sheet-health-max">/</h3>
-            <h3 class="sheet-health-max-value"><span class="sheet-health-max-value" name="attr_max_health"></span>
-              <input class="sheet-hide" type="text" name="attr_max_health" value="20"/>
-            </h3>
-          </div>
+    <div class="sheet-character-role">
+      <h3 class="sheet-character-title">Role / Title</h3>
+      <input class="sheet-pc-name" type="text" name="attr_character_role" placeholder="Character Role/Title"/>
+    </div>
+  </div>
+  <div class="sheet-resources">
+    <div class="sheet-resource">
+      <label class="sheet-health-reset">RESET
+        <input class="sheet-health-reset sheet-hide" type="checkbox" name="attr_health_reset"/>
+      </label>
+      <h2 class="sheet-resource-title">HEALTH</h2>
+      <div class="sheet-health-status-box">
+        <input class="sheet-resource-value" type="text" name="attr_health" value="20"/>
+        <div class="sheet-health-max-box">
+          <h3 class="sheet-health-max">/</h3>
+          <h3 class="sheet-health-max-value"><span class="sheet-health-max-value" name="attr_max_health"></span>
+            <input class="sheet-hide" type="text" name="attr_max_health" value="20"/>
+          </h3>
         </div>
       </div>
-      <div class="sheet-resource">
-        <h2 class="sheet-resource-title">SPIRIT</h2>
-        <select class="sheet-resource-value" name="attr_spirit">
-          <option value="10">+10</option>
-          <option value="9">+9</option>
-          <option value="8">+8</option>
-          <option value="7">+7</option>
-          <option value="6">+6</option>
-          <option value="5">+5</option>
-          <option value="4">+4</option>
-          <option value="3">+3</option>
-          <option value="2">+2</option>
-          <option value="1">+1</option>
-          <option value="0">+0</option>
-        </select>
+    </div>
+    <div class="sheet-resource">
+      <h2 class="sheet-resource-title">SPIRIT</h2>
+      <select class="sheet-resource-value" name="attr_spirit">
+        <option value="10">+10</option>
+        <option value="9">+9</option>
+        <option value="8">+8</option>
+        <option value="7">+7</option>
+        <option value="6">+6</option>
+        <option value="5">+5</option>
+        <option value="4">+4</option>
+        <option value="3">+3</option>
+        <option value="2">+2</option>
+        <option value="1">+1</option>
+        <option value="0">+0</option>
+      </select>
+    </div>
+    <div class="sheet-resource">
+      <h2 class="sheet-resource-title">SUPPLY</h2>
+      <select class="sheet-resource-value" name="attr_supply">
+        <option value="10">+10</option>
+        <option value="9">+9</option>
+        <option value="8">+8</option>
+        <option value="7">+7</option>
+        <option value="6">+6</option>
+        <option value="5">+5</option>
+        <option value="4">+4</option>
+        <option value="3">+3</option>
+        <option value="2">+2</option>
+        <option value="1">+1</option>
+        <option value="0">+0</option>
+      </select>
+    </div>
+    <div class="sheet-resource">
+      <h2 class="sheet-resource-title">WEALTH</h2>
+      <select class="sheet-resource-value" name="attr_wealth">
+        <option value="10">+10</option>
+        <option value="9">+9</option>
+        <option value="8">+8</option>
+        <option value="7">+7</option>
+        <option value="6">+6</option>
+        <option value="5">+5</option>
+        <option value="4">+4</option>
+        <option value="3">+3</option>
+        <option value="2">+2</option>
+        <option value="1">+1</option>
+        <option value="0">+0</option>
+      </select>
+    </div>
+    <div class="sheet-resource">
+      <h2 class="sheet-resource-title">LOAD</h2>
+      <select class="sheet-resource-value" name="attr_load">
+        <option value="12">12</option>
+        <option value="11">11</option>
+        <option value="10">10</option>
+        <option value="9">9</option>
+        <option value="8">8</option>
+        <option value="7">7</option>
+        <option value="6">6</option>
+        <option value="5">5</option>
+        <option value="4">4</option>
+        <option value="3">3</option>
+        <option value="2">2</option>
+        <option value="1">1</option>
+        <option value="0">0</option>
+      </select>
+    </div>
+    <div class="sheet-resource">
+      <h2 class="sheet-resource-title">EXPERIENCE</h2>
+      <div class="sheet-health-status-box">
+        <input class="sheet-resource-value" type="text" name="attr_xp" value="0"/>
       </div>
-      <div class="sheet-resource">
-        <h2 class="sheet-resource-title">SUPPLY</h2>
-        <select class="sheet-resource-value" name="attr_supply">
-          <option value="10">+10</option>
-          <option value="9">+9</option>
-          <option value="8">+8</option>
-          <option value="7">+7</option>
-          <option value="6">+6</option>
-          <option value="5">+5</option>
-          <option value="4">+4</option>
-          <option value="3">+3</option>
-          <option value="2">+2</option>
-          <option value="1">+1</option>
-          <option value="0">+0</option>
-        </select>
-      </div>
-      <div class="sheet-resource">
-        <h2 class="sheet-resource-title">WEALTH</h2>
-        <select class="sheet-resource-value" name="attr_wealth">
-          <option value="10">+10</option>
-          <option value="9">+9</option>
-          <option value="8">+8</option>
-          <option value="7">+7</option>
-          <option value="6">+6</option>
-          <option value="5">+5</option>
-          <option value="4">+4</option>
-          <option value="3">+3</option>
-          <option value="2">+2</option>
-          <option value="1">+1</option>
-          <option value="0">+0</option>
-        </select>
-      </div>
-      <div class="sheet-resource">
-        <h2 class="sheet-resource-title">LOAD</h2>
-        <select class="sheet-resource-value" name="attr_load">
-          <option value="12">12</option>
-          <option value="11">11</option>
-          <option value="10">10</option>
-          <option value="9">9</option>
-          <option value="8">8</option>
-          <option value="7">7</option>
-          <option value="6">6</option>
-          <option value="5">5</option>
-          <option value="4">4</option>
-          <option value="3">3</option>
-          <option value="2">2</option>
-          <option value="1">1</option>
-          <option value="0">0</option>
-        </select>
-      </div>
-      <div class="sheet-resource">
-        <h2 class="sheet-resource-title">EXPERIENCE</h2>
-        <div class="sheet-health-status-box">
-          <input class="sheet-resource-value" type="text" name="attr_xp" value="0"/>
-        </div>
-        <h2 class="sheet-resource-title">SPENT</h2>
-        <div class="sheet-health-status-box">
-          <input class="sheet-resource-value" type="text" name="attr_total_xp" value="0"/>
-        </div>
+      <h2 class="sheet-resource-title">SPENT</h2>
+      <div class="sheet-health-status-box">
+        <input class="sheet-resource-value" type="text" name="attr_total_xp" value="0"/>
       </div>
     </div>
   </div>
@@ -109,9 +114,46 @@
   <div class="sheet-nav-child">
     <label for="sheet-bonds">Bonds</label>
   </div>
+  <div class="sheet-nav-child">
+    <label for="sheet-proficiencies">Proficiencies</label>
+  </div>
 </div>
 <input class="sheet-hide sheet-summary" type="radio" name="attr_ironcrunch-page" id="sheet-summary" value="1" checked="checked"/>
 <div class="sheet-summary sheet-hide">
+  <div class="sheet-character-details">
+    <div class="sheet-details-row">
+      <div class="sheet-character-detail">
+        <p>Ancestry</p>
+        <input type="text" name="attr_ancestry" placeholder="Ancestry"/>
+      </div>
+      <div class="sheet-character-detail">
+        <p>Sex</p>
+        <input type="text" name="attr_sex" placeholder="Sex"/>
+      </div>
+      <div class="sheet-character-detail">
+        <p>Age</p>
+        <input type="text" name="attr_age" placeholder="age"/>
+      </div>
+      <div class="sheet-character-detail">
+        <p>Speed</p>
+        <input type="text" name="attr_speed" placeholder="Speed"/>
+      </div>
+      <div class="sheet-character-detail">
+        <p>Resilience</p>
+        <input type="text" name="attr_resilience" placeholder="Resilience"/>
+      </div>
+    </div>
+    <div class="sheet-details-row">
+      <div class="sheet-character-detail">
+        <p>Appearance</p>
+        <input type="text" name="attr_appearance" placeholder="Appearance"/>
+      </div>
+      <div class="sheet-character-detail">
+        <p>Alignment</p>
+        <input type="text" name="attr_alignment" placeholder="Alignment"/>
+      </div>
+    </div>
+  </div>
   <div class="sheet-stats">
     <div class="sheet-stat">
       <button type="roll" title="Roll +Edge" name="rollEdge" value="&amp;{template:ironcrunch_moves} {{header=@{character_name}}} {{name=Roll +edge}} {{action=[[d12+@{edge}+(?{Modifier|0})]]}} {{negate1=[[1+@{edge}+(?{Modifier|0})]]}} {{negate2=[[2+@{edge}+(?{Modifier|0})]]}} {{negate3=[[3+@{edge}+(?{Modifier|0})]]}} {{negate4=[[4+@{edge}+(?{Modifier|0})]]}} {{negate5=[[5+@{edge}+(?{Modifier|0})]]}} {{negate6=[[6+@{edge}+(?{Modifier|0})]]}} {{negate7=[[7+@{edge}+(?{Modifier|0})]]}} {{negate8=[[8+@{edge}+(?{Modifier|0})]]}} {{negate9=[[9+@{edge}+(?{Modifier|0})]]}} {{negate10=[[10+@{edge}+(?{Modifier|0})]]}} {{negate11=[[11+@{edge}+(?{Modifier|0})]]}} {{negate12=[[12+@{edge}+(?{Modifier|0})]]}} {{challenge1=[[d20]]}} {{challenge2=[[d20]]}} {{momentum=[[@{momentum}]]}} {{modifiers=[[@{edge}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{edge}]]}}"></button>
@@ -214,6 +256,10 @@
       </select>
       <input class="sheet-hide" type="text" name="attr_misses-filled" value="floor((@{misses-0}+@{misses-1}+@{misses-2}+@{misses-3}+@{misses-4}+@{misses-5}+@{misses-6}+@{misses-7}+@{misses-8}+@{misses-9})/4)" disabled="true"/>
     </div>
+  </div>
+  <div>
+    <h3 class="sheet-divide" style="margin-top: 1em;">NOTES</h3><br/>
+    <textarea name="attr_sheet-notes"></textarea>
   </div>
 </div>
 <input class="sheet-hide sheet-bonds" type="radio" name="attr_ironcrunch-page" id="sheet-bonds" value="2"/>
@@ -394,11 +440,134 @@
               <option value="3">*</option>
               <option value="4">#</option>
           </select>
-          <button type="roll" title="Fulfill your Vow" name="rollVow" value="&amp;{template:ironcrunch} {{header=@{character_name} &lt;em&gt;Fulfill Your Vow&lt;/em&gt; }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}">              </button>
+          <button type="roll" title="Fulfill your Vow" name="rollVow" value="&amp;{template:ironcrunch_progress} {{header=@{character_name} &lt;em&gt;Fulfill Your Vow&lt;/em&gt; }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}">              </button>
           <input class="sheet-hide" type="text" name="attr_vow-filled" value="floor((@{vow-0}+@{vow-1}+@{vow-2}+@{vow-3}+@{vow-4}+@{vow-5}+@{vow-6}+@{vow-7}+@{vow-8}+@{vow-9})/4)" disabled="disabled"/>
         </div>
       </div>
     </fieldset>
+  </div>
+</div>
+<input class="sheet-hide sheet-proficiencies" type="radio" name="attr_ironcrunch-page" id="sheet-proficiencies" value="4"/>
+<div class="sheet-proficiencies sheet-hide">
+  <h3 class="sheet-divide">&emsp;PROFICIENCIES&emsp;</h3>
+  <div class="sheet-proficiencies-weapons">
+    <div class="sheet-proficiency">
+      <h3 class="sheet-proficiency-title">axes
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_axes_proficiency_0"/><span class="sheet-proficiency-text">when you <em>strike</em>, <em>clash</em>, or <em>battle</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_axes_proficiency_1"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_axes_proficiency_2"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, you may reroll.</span>
+        </div>
+      </h3>
+    </div>
+    <div class="sheet-proficiency">
+      <h3 class="sheet-proficiency-title">polearms
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_polearms_proficiency_0"/><span class="sheet-proficiency-text">when you <em>strike</em>, <em>clash</em>, or <em>battle</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_polearms_proficiency_1"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_polearms_proficiency_2"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, you may reroll.</span>
+        </div>
+      </h3>
+    </div>
+    <div class="sheet-proficiency">
+      <h3 class="sheet-proficiency-title">swords
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_swords_proficiency_0"/><span class="sheet-proficiency-text">when you <em>strike</em>, <em>clash</em>, or <em>battle</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_swords_proficiency_1"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_swords_proficiency_2"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, you may reroll.</span>
+        </div>
+      </h3>
+    </div>
+    <div class="sheet-proficiency">
+      <h3 class="sheet-proficiency-title">thrown weapons
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_thrown weapons_proficiency_0"/><span class="sheet-proficiency-text">when you <em>strike</em>, <em>clash</em>, or <em>battle</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_thrown weapons_proficiency_1"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_thrown weapons_proficiency_2"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, you may reroll.</span>
+        </div>
+      </h3>
+    </div>
+    <div class="sheet-proficiency">
+      <h3 class="sheet-proficiency-title">whips &amp; chains
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_whips &amp; chains_proficiency_0"/><span class="sheet-proficiency-text">when you <em>strike</em>, <em>clash</em>, or <em>battle</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_whips &amp; chains_proficiency_1"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_whips &amp; chains_proficiency_2"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, you may reroll.</span>
+        </div>
+      </h3>
+    </div>
+    <div class="sheet-proficiency">
+      <h3 class="sheet-proficiency-title">blunt weapons
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_blunt weapons_proficiency_0"/><span class="sheet-proficiency-text">when you <em>strike</em>, <em>clash</em>, or <em>battle</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_blunt weapons_proficiency_1"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_blunt weapons_proficiency_2"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, you may reroll.</span>
+        </div>
+      </h3>
+    </div>
+    <div class="sheet-proficiency">
+      <h3 class="sheet-proficiency-title">projectile weapons
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_projectile weapons_proficiency_0"/><span class="sheet-proficiency-text">when you <em>strike</em>, <em>clash</em>, or <em>battle</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_projectile weapons_proficiency_1"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_projectile weapons_proficiency_2"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, you may reroll.</span>
+        </div>
+      </h3>
+    </div>
+    <div class="sheet-proficiency">
+      <h3 class="sheet-proficiency-title">stabbing weapons
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_stabbing weapons_proficiency_0"/><span class="sheet-proficiency-text">when you <em>strike</em>, <em>clash</em>, or <em>battle</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_stabbing weapons_proficiency_1"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_stabbing weapons_proficiency_2"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, you may reroll.</span>
+        </div>
+      </h3>
+    </div>
+    <div class="sheet-proficiency">
+      <h3 class="sheet-proficiency-title">unarmed
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_unarmed_proficiency_0"/><span class="sheet-proficiency-text">when you <em>strike</em>, <em>clash</em>, or <em>battle</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_unarmed_proficiency_1"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, add +1.</span>
+        </div>
+        <div class="sheet-option-list">
+          <input type="checkbox" name="attr_unarmed_proficiency_2"/><span class="sheet-proficiency-text">when you <em>inflict harm</em>, you may reroll.</span>
+        </div>
+      </h3>
+    </div>
   </div>
 </div>
 <div class="sheet-footer">
